--- a/index.html
+++ b/index.html
@@ -3,22 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome to Kokoa Clone</title>
 </head>
-<body>
-    <div id="status-bar">
+<body> 
+    <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
-            <!--To Do: WIFI Icon-->
+            <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
             <span>110%</span>
-            <!--Battery Icon-->
-            <!--Lightning Icon-->
+            <i class="fas fa-battery-full"></i>
+            <i class="fas fa-bolt"></i>
         </div>
     </div> 
+
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+        <p class="welcome-header__text">If you have Kokoa Account, log in with your email or phon number.</p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phon number"/>
+        <input type="password" placeholder="Password"/>
+        <input type="submit" value="Log In" />
+        <a href="#">Find Kakao Account or Password</a>
+    </form>
+
+    
+    <script src="https://kit.fontawesome.com/176034b2da.js" crossorigin="anonymous"></script>
 </body>
 </html>
